--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,7 +4,7 @@
   height: 100vh;
   min-height: 550px;
   position: relative;
-  background-image: url('/images/Home.jpg');
+  background-color: var(--white);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
