--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -312,6 +312,8 @@ body {
   
   .footer-main {
     width: 100%;
+    flex-direction: column;
+    align-items: center;
   }
   
   .footer-col {
@@ -324,10 +326,18 @@ body {
   
   .footer-info {
     margin-bottom: var(--spacing-2);
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-right: 0;
+    margin-top: 0;
+    padding-top: 0;
   }
   
   .footer-logo {
     width: 120px;
+    margin: 0 auto;
+    display: block;
   }
   
   .footer-heading {
